--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
   }
 }
